<resources>
    <string name="app_name">MyNotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мои заметки</string>
    <string name="nav_header_user_name">Аноним</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main">Заметки</string>
    <string name="menu_detail">Подробнее</string>
    <string name="note_text_example">Текст заметки</string>
    <string name="title_text_example">Заголовок заметки</string>
    <string name="date_text_example">20.03.2021</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="nav_header_user_mail">unknown email</string>
    <string name="menu_edit">Редактирование</string>
    <string name="title_hint">Название заметки</string>
    <string name="note_hint">Текст заметки</string>
    <string name="date_hint">Дата создания</string>
    <string name="btn_save_text">SAVE</string>
    <string name="color_title">Цвет заметки</string>
    <string name="submit">Добавить заметку</string>
    <string name="menu_to_notes">к заметкам</string>
    <string name="menu_setting_title">Настройки</string>
    <string name="menu_about_title">О приложении</string>
    <string name="menu_edit_title">К заметкам</string>
    <string name="menu_profile">Профиль</string>
    <string name="need_auth">Для работы с заметками нужно выполнить вход</string>
    <string name="about_text">Приложение <b>MyNotes</b> - домашняя работа по курсу
    <i>Android 1. Знакомство с платформой</i> на факультете <u>Android-разработки</u>
    в Geek University.</string>
    <string name="action_find">Поиск</string>
    <string name="action_sort">Сорт</string>
    <string name="ok">OK</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="app_name_rus">Мои заметки</string>
    <string name="title_alert_delete">Удаление заметки</string>
    <string name="menu_edit_title_bottom">Редактирование</string>
    <string name="edit_mode_title">Edit note</string>
    <string name="add_mode_title">Create note</string>
    <integer name="com_vk_sdk_AppId">7813010</integer>
</resources>