<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/ic_back"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginStart="@dimen/img_margin_left"
        android:layout_marginEnd="@dimen/img_margin_right"
        android:layout_marginBottom="@dimen/img_margin_bottom"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toTopOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_header_avatar" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_user_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/user_mail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_user_mail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/app_ico"
        android:layout_width="@dimen/img_size_two"
        android:layout_height="@dimen/img_size_two"
        android:layout_margin="@dimen/img_margin"
        android:layout_marginStart="@dimen/img_margin_left"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_app" />

</androidx.constraintlayout.widget.ConstraintLayout>